src/parser/snapshots/expr/arithmetic/multiplication_has_higher_precedence_than_addition.snap
---
source: src/parser/parser.rs
description: arithmetic expressions with correct precedence
expression: actual.unwrap()
info: 4+2*3+8
---
location:
  line: 1
  column: 1
kind:
  binary:
    - add
    - location:
        line: 1
        column: 1
      kind:
        binary:
          - add
          - location:
              line: 1
              column: 1
            kind:
              int_constant:
                - "4"
                - decimal
          - location:
              line: 1
              column: 3
            kind:
              binary:
                - multiply
                - location:
                    line: 1
                    column: 3
                  kind:
                    int_constant:
                      - "2"
                      - decimal
                - location:
                    line: 1
                    column: 5
                  kind:
                    int_constant:
                      - "3"
                      - decimal
    - location:
        line: 1
        column: 7
      kind:
        int_constant:
          - "8"
          - decimal
