src/parser/snapshots/expr/arithmetic/multiplication_is_left_associative.snap
---
source: src/parser/parser.rs
description: arithmetic expressions with correct associativity
expression: actual.unwrap()
info: 2*3*4
---
location:
  line: 1
  column: 1
kind:
  binary:
    - multiply
    - location:
        line: 1
        column: 1
      kind:
        binary:
          - multiply
          - location:
              line: 1
              column: 1
            kind:
              int_constant:
                - "2"
                - decimal
          - location:
              line: 1
              column: 3
            kind:
              int_constant:
                - "3"
                - decimal
    - location:
        line: 1
        column: 5
      kind:
        int_constant:
          - "4"
          - decimal
