src/parser/snapshots/expr/arithmetic/multiplication_with_unary_operands.snap
---
source: src/parser/parser.rs
description: arithmetic expressions
expression: actual.unwrap()
info: ~4*-3
---
location:
  line: 1
  column: 1
kind:
  binary:
    - multiply
    - location:
        line: 1
        column: 1
      kind:
        unary:
          - complement
          - location:
              line: 1
              column: 2
            kind:
              int_constant:
                - "4"
                - decimal
    - location:
        line: 1
        column: 4
      kind:
        unary:
          - negate
          - location:
              line: 1
              column: 5
            kind:
              int_constant:
                - "3"
                - decimal
